# smol.pub

./: .gitignore  README.md  pyproject.toml  smolpub.sh
app/: app.py
smolpub/: app.py
tests/examples/: not^a^valid^filename  smolpub-python-script-announcement.gmi  this-is-a-test  this-is-not-valid-01  this-is-not-valid-02
